objects/IAM_WWSPS_HQ_Regions__mdt.object
<CustomObject>
    <fields>
        <fullName>IAM_User_Role_ID__c</fullName>
        <label>User Role ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_User_Role__c</fullName>
        <description>Role of the user to that specific HQ</description>
        <label>User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Code__c</fullName>
        <label>Service Provider Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>WWSPS HQ Regions</label>
    <pluralLabel>WWSPS HQ Regions</pluralLabel>
</CustomObject>